@@ -724,29 +724,29 @@
 
 /* Interrupt vectors */
 /* Vector 0 is the reset vector */
-#define SIG_INT0		_VECTOR(1)
-#define SIG_INT1		_VECTOR(2)
-#define SIG_INT2		_VECTOR(3)
-#define SIG_PCINT0		_VECTOR(4)
-#define SIG_PCINT1		_VECTOR(5)
-#define SIG_PCINT2		_VECTOR(6)
-#define SIG_PCINT3		_VECTOR(7)
-#define SIG_WDT			_VECTOR(8)
-#define SIG_TIMER2_COMPA	_VECTOR(9)
-#define SIG_TIMET2_COMPB	_VECTOR(10)
-#define SIG_TIMER2_OVF		_VECTOR(11)
-#define SIG_TIMER1_CAPT		_VECTOR(12)
-#define SIG_TIMER1_COMPA	_VECTOR(13)
-#define SIG_TIMER1_COMPB	_VECTOR(14)
-#define SIG_TIMER1_OVF		_VECTOR(15)
-#define SIG_TIMER0_COMPA	_VECTOR(16)
-#define SIG_TIMER0_COMPB	_VECTOR(17)
-#define SIG_TIMER0_OVF		_VECTOR(18)
-#define SIG_SPI_STC		_VECTOR(19)
-#define SIG_USART0_RX		_VECTOR(20)
-#define SIG_USART0_UDRE		_VECTOR(21)
-#define SIG_USART0_TX		_VECTOR(22)
-#define SIG_ANALOG_COMP		_VECTOR(23)
+#define SIG_INTERRUPT0		_VECTOR(1)
+#define SIG_INTERRUPT1		_VECTOR(2)
+#define SIG_INTERRUPT2		_VECTOR(3)
+#define SIG_PIN_CHANGE0		_VECTOR(4)
+#define SIG_PIN_CHANGE1		_VECTOR(5)
+#define SIG_PIN_CHANGE2		_VECTOR(6)
+#define SIG_PIN_CHANGE3		_VECTOR(7)
+#define SIG_WATCHDOG_TIMEOUT	_VECTOR(8)
+#define SIG_OUTPUT_COMPARE2A	_VECTOR(9)
+#define SIG_OUTPUT_COMPARE2B	_VECTOR(10)
+#define SIG_OVERFLOW2		_VECTOR(11)
+#define SIG_INPUT_CAPTURE1	_VECTOR(12)
+#define SIG_OUTPUT_COMPARE1A	_VECTOR(13)
+#define SIG_OUTPUT_COMPARE1B	_VECTOR(14)
+#define SIG_OVERFLOW1		_VECTOR(15)
+#define SIG_OUTPUT_COMPARE0A	_VECTOR(16)
+#define SIG_OUTPUT_COMPARE0B	_VECTOR(17)
+#define SIG_OVERFLOW0		_VECTOR(18)
+#define SIG_SPI			_VECTOR(19)
+#define SIG_USART_RECV		_VECTOR(20)
+#define SIG_USART_DATA		_VECTOR(21)
+#define SIG_USART_TRANS		_VECTOR(22)
+#define SIG_COMPARATOR		_VECTOR(23)
 #define SIG_ADC			_VECTOR(24)
 #define SIG_EEPROM_READY	_VECTOR(35)
 #define SIG_TWI			_VECTOR(26)
